--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: 'b2a3e8.github.io'
+title: 'https://prettypositron.github.io/'
 description: "A jekyll theme inspired by linux consoles for hackers, developers and script kiddies."
 baseurl: "/jekyll-theme-console"
-url: "https://b2a3e8.github.io"
+url: "https://prettypositron.github.io/"
 
 header_pages:
   - index.md
@@ -15,4 +15,4 @@ footer: 'follow us on <a href="https://twitter.com/">twitter</a>'
 
 # Build settings
 markdown: kramdown
-remote_theme: b2a3e8/jekyll-theme-console
+remote_theme: prettypositron/jekyll-theme-console
